fixed vertical overflow issue on small/med devices

--- a/sass/medium.scss
+++ b/sass/medium.scss
@@ -170,6 +170,8 @@ header {
 }
 
 .arrow {
+  cursor: pointer;
+
   display: block;
   position: absolute;
   z-index: 10;
